# yubihsm-setup

./: .gitignore  Cargo.toml  README.adoc
.github/workflows/: release_linux.yml  release_macos.yml  release_windows.yml
man/: yubihsm-setup.1
resources/release/: Vagrantfile  build-all.sh  build-pkg.sh  build-rpm.sh  yubihsm-setup.spec
resources/release/debian/: changelog
resources/release/licenses/: scan_dir
src/: main.rs
