#
# Copyright 2015-2018 Yubico AB
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "yubihsm-setup"
version = "2.2.0"
authors = ["Alessio Di Mauro <alessio@yubico.com>"]
description = "Setup tool for YubiHSM 2"
license = "Apache-2.0"

[dependencies]
base64 = "0.13.0"
clap = "2.34.0"
lazy_static = "1.4.0"
regex = "1.5.4"
rusty_secrets = "0.0.2"
scan_dir = "0.3.3"

[dependencies.yubihsmrs]
path = "../yubihsmrs/"
version = "2.1.2"

[package.metadata.deb]
maintainer = "Alessio Di Mauro <alessio@yubico.com>"
copyright = "2018, Yubico"
revision= "1"
extended-description = """\
 A simple tool to provision and restore \
YubiHSM 2 for specific use cases"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/yubihsm-setup", "usr/bin/", "755"],
    ["man/yubihsm-setup.1", "usr/share/man/man1/yubihsm-setup.1", "644"],
]
